Bug 1887617 - Port bug 1886960: Land the more native-looking macOS theme behind a pref. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D205550

--HG--
extra : amend_source : f363d2246fe329b08813acdeceeffadccd1e4e6a

--- a/mail/themes/osx/mail/compose/messengercompose.css
+++ b/mail/themes/osx/mail/compose/messengercompose.css
@@ -11,6 +11,31 @@
 
 @namespace html url("http://www.w3.org/1999/xhtml");
 
+/* stylelint-disable-next-line media-query-no-invalid */
+@media (-moz-bool-pref: "mail.theme.macos.native-theme") {
+  :root:not([lwtheme]) {
+    -moz-default-appearance: -moz-mac-unified-toolbar-window;
+    appearance: auto;
+
+    #compose-toolbox {
+      appearance none;
+      background: transparent;
+
+      /* This is conceptually a background, but putting this on a
+       * pseudo-element avoids it from suppressing the chrome-content separator
+       * border, etc */
+      &::after {
+        -moz-default-appearance: -moz-window-titlebar;
+        appearance: auto;
+        content: "";
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+      }
+    }
+  }
+}
+
 #compose-toolbox {
   :root[lwtheme] &::after {
     top: 100%;
